# tricount-hs

./: flake.nix  tricount.cabal
src/: Main.hs  main.hs
