cabal-version:      3.0
name:               tricount
version:            0.1
synopsis:           various haskell implementations of triangle counting

license:            MIT
copyright:          Copyright (c) 2023 Parrish
maintainer:         jtparrish@outlook.com
author:             Parrish J T
category:           HPC
homepage:           https://github.com/jtparrish/tricount-hs
bug-reports:        https://github.com/jtparrish/tricount-hs/issues
--tested-with:        GHC ==9.2.6 || ==9.2.7

source-repository head
  type:     git
  location: https://github.com/jtparrish/tricount-hs

extra-source-files:
  LICENSE
  README.md

executable tricount
  -- other-modules:      TodoApp.Request
  main-is:            Main.hs
  default-extensions:
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    KindSignatures
    OverloadedStrings
    OverloadedStrings
    ScopedTypeVariables
    PatternSynonyms

  build-depends:
    base,
    algebraic-graphs,

  hs-source-dirs:     src
  default-language:   Haskell2010
